[FIX] website: fix product ribbon shadow overlap on shop page
The `o_ribbon_right` class is applied to all product ribbons on the
shop page... even for products that are not supposed to have ribbons.
This occurs since [1], causing empty ribbon shadows to overlap and crop
the top-right corner of product images.

This is fixing the issue with an extra CSS rule. Note that that rule was
already added in 18.0 with [2]. Removing that rule in future versions
of Odoo will be part of another task.

[1]: https://github.com/odoo/odoo/commit/f12adbaf73699374eda07aedc01eadcf872f586d
[2]: https://github.com/odoo/odoo/commit/b5b8a133eb67f01cabec01a1dc874e8a27a3bb46#diff-f338780f594d6b1f46eda5d3fb9fed86f3c3c8f65522fb93e639534e9d92cdb2R1832

opw-4190631

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1632,6 +1632,10 @@ $ribbon-padding: 100px;
     white-space: nowrap;
     text-align: center;
     pointer-events: none;
+
+    &:empty {
+        display: none;
+    }
 }
 
 .o_ribbon_right {
